# RustTheNewC

./: .gitignore  .gitmodules  LICENSE.txt  Readme.md  THIRD_PARTIES.txt
src/dotnet/: Program.cs  RustTheNewC.csproj
src/rust/: Cargo.toml
src/rust/.devcontainer/: Dockerfile  devcontainer.json
src/rust/blosc-sys/: Cargo.toml  build.rs
src/rust/blosc-sys/src/: bindings.rs  lib.rs
src/rust/corelib/: Cargo.toml
src/rust/corelib/src/: lib.rs
src/rust/lmdb-sys/: Cargo.toml  build.rs  wrapper.h
src/rust/lmdb-sys/src/: bindings.rs  lib.rs
src/rust/sandbox/: Cargo.toml
src/rust/sandbox/src/: main.rs
src/rust/sqlite-sys/: Cargo.toml  build.rs  wrapper.h
src/rust/sqlite-sys/sqlite/: sqlite3.h
src/rust/sqlite-sys/src/: bindings.rs  lib.rs
