[package]
name = "blosc-sys"
version = "0.1.0"
authors = ["Victor Baybekov <vbaybekov@gmail.com>"]
publish = false
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blosc_sys"

[build-dependencies]
cmake = "0.1"
bindgen = "0.50"

[dependencies]
libc = "0.2"