[package]
name = "corelib"
version = "0.1.0"
authors = ["Victor Baybekov <vbaybekov@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib","staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.19.0"