[package]
name = "corelib"
version = "0.1.0"
authors = ["Victor Baybekov <vbaybekov@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib","rlib"] # Need rlib for sandbox to work

[dependencies]
lmdb-sys = { version = "*", path = "../lmdb-sys" }
blosc-sys = { version = "*", path = "../blosc-sys" }
sqlite-sys = { version = "*", path = "../sqlite-sys" }
libc = { version = "0.2"}
