[package]
name = "lmdb-sys"
version = "0.1.0"
authors = ["Victor Baybekov <vbaybekov@gmail.com>"]
publish = false
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lmdb_sys"

[build-dependencies]
cc = "1.0"
bindgen = "0.50"

[dependencies]
libc = "0.2"